tests/unit-fail-compilation/alignas.ref
alignas.c:3:1: error: Alignas attribute specifying an alignment less strict than would otherwise be required.
  Constraint violation (CV-TCANON1). See C11 sec. 6.7.5:4
Translation failed (config dumped). Run kcc -d alignas.c to see commands run.
